--- a/search/index.html
+++ b/search/index.html
@@ -1,16 +1,16 @@
 <!doctype html>
 <html class="position-relative" itemscope itemtype="http://schema.org/WebPage" lang="en"
   data-bs-theme="auto" data-palette="indigo">
-  <head><script src="https://byteverso.com/assets/init/bundle.min.ac9131169d6aa012a5ca3ff92ead581e7ce010565729bffb1d8c0cf4f7c67c6a.js" integrity="sha256-rJExFp1qoBKlyj/5Lq1YHnzgEFZXKb/7HYwM9PfGfGo=" crossorigin="anonymous"></script>
+  <head><script src="https://www.byteverso.com/assets/init/bundle.min.bb6ecb2a02515c5f14fba57c23e1cdda2f9e741f0865dc1a95e541af33252f95.js" integrity="sha256-u27LKgJRXF8U&#43;6V8I&#43;HN2i&#43;edB8IZdwaleVBrzMlL5U=" crossorigin="anonymous"></script>
 <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Search - BYTEVERSO</title>
-    <link rel="icon" href="https://byteverso.com/favicon_hub5539f71f6ca3f4d14bc6a344cab8163_16141_16x16_resize_box_3.png" sizes="16x16" type="image/png">
-    <link rel="icon" href="https://byteverso.com/favicon_hub5539f71f6ca3f4d14bc6a344cab8163_16141_32x32_resize_box_3.png" sizes="32x32" type="image/png">
-    <link rel="apple-touch-icon" href="https://byteverso.com/favicon_hub5539f71f6ca3f4d14bc6a344cab8163_16141_180x180_resize_box_3.png" sizes="180x180" type="image/png">
-    <link rel="icon" href="https://byteverso.com/favicon_hub5539f71f6ca3f4d14bc6a344cab8163_16141_150x150_resize_box_3.png" sizes="150x150" type="image/png">
-    <link rel="icon" href="https://byteverso.com/favicon_hub5539f71f6ca3f4d14bc6a344cab8163_16141_192x192_resize_box_3.png" sizes="192x192" type="image/png">
-<link rel="mask-icon" href="https://byteverso.com/safari-pinned-tab.svg" color="#6f42c1">
+    <link rel="icon" href="https://www.byteverso.com/favicon_hub5539f71f6ca3f4d14bc6a344cab8163_16141_16x16_resize_box_3.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="https://www.byteverso.com/favicon_hub5539f71f6ca3f4d14bc6a344cab8163_16141_32x32_resize_box_3.png" sizes="32x32" type="image/png">
+    <link rel="apple-touch-icon" href="https://www.byteverso.com/favicon_hub5539f71f6ca3f4d14bc6a344cab8163_16141_180x180_resize_box_3.png" sizes="180x180" type="image/png">
+    <link rel="icon" href="https://www.byteverso.com/favicon_hub5539f71f6ca3f4d14bc6a344cab8163_16141_150x150_resize_box_3.png" sizes="150x150" type="image/png">
+    <link rel="icon" href="https://www.byteverso.com/favicon_hub5539f71f6ca3f4d14bc6a344cab8163_16141_192x192_resize_box_3.png" sizes="192x192" type="image/png">
+<link rel="mask-icon" href="https://www.byteverso.com/safari-pinned-tab.svg" color="#6f42c1">
 <meta name="keywords" content="" />
 <meta name="description" content="" /><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Search"/>
@@ -18,27 +18,27 @@
 <meta property="og:title" content="Search" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://byteverso.com/search/" />
+<meta property="og:url" content="https://www.byteverso.com/search/" />
 
 <meta itemprop="name" content="Search">
 <meta itemprop="description" content="">
-  <meta property="og:image" content="https://byteverso.com/images/logo.png"/>
-  <meta name="twitter:image" content="https://byteverso.com/images/logo.png"/>
-<link rel="alternate" type="application/rss+xml" href="https://byteverso.com/search/index.xml" title="BYTEVERSO" />
-<link data-precache rel="stylesheet" href="https://byteverso.com/assets/main/bundle.min.3de5e8cf07ea691c5bc16a2294f1d07d4ab896f9dc43373d0576ecec8936215e.css" integrity="sha256-PeXozwfqaRxbwWoilPHQfUq4lvncQzc9BXbs7Ik2IV4=" crossorigin="anonymous">
+  <meta property="og:image" content="https://www.byteverso.com/images/logo.png"/>
+  <meta name="twitter:image" content="https://www.byteverso.com/images/logo.png"/>
+<link rel="alternate" type="application/rss+xml" href="https://www.byteverso.com/search/index.xml" title="BYTEVERSO" />
+<link data-precache rel="stylesheet" href="https://www.byteverso.com/assets/main/bundle.min.1e735b6255dfe8460af83b54e9738a3f626460702087158461dd1b69c211d69b.css" integrity="sha256-HnNbYlXf6EYK+DtU6XOKP2JkYHAghxWEYd0bacIR1ps=" crossorigin="anonymous">
 
-    <link data-precache rel="stylesheet" href="https://byteverso.com/assets/viewer/bundle.min.eb914844636cd41f221f109e99c887bbc3b6b5ffb2af7c664b284cea2d1b54b7.css" integrity="sha256-65FIRGNs1B8iHxCemciHu8O2tf&#43;yr3xmSyhM6i0bVLc=" crossorigin="anonymous">
+    <link data-precache rel="stylesheet" href="https://www.byteverso.com/assets/viewer/bundle.min.eb914844636cd41f221f109e99c887bbc3b6b5ffb2af7c664b284cea2d1b54b7.css" integrity="sha256-65FIRGNs1B8iHxCemciHu8O2tf&#43;yr3xmSyhM6i0bVLc=" crossorigin="anonymous">
 
-  <link rel="preload" href="https://byteverso.com/search/index.1.json" as="fetch" type="application/json" crossorigin="anonymous">
+  <link rel="preload" href="https://www.byteverso.com/search/index.1.json" as="fetch" type="application/json" crossorigin="anonymous">
 
 <script>
   window.searchResultContentWordCount = parseInt('240');
   window.searchPaginate = parseInt('10');
   window.fuseOptions = JSON.parse('{\u0022ignoreLocation\u0022:true}');
-  window.searchIndies = JSON.parse('[\u0022https:\/\/byteverso.com\/search\/index.1.json\u0022]');
-  window.searchMetaIndex = 'https:\/\/byteverso.com\/search\/meta.json';
+  window.searchIndies = JSON.parse('[\u0022https:\/\/www.byteverso.com\/search\/index.1.json\u0022]');
+  window.searchMetaIndex = 'https:\/\/www.byteverso.com\/search\/meta.json';
 </script>
-<link data-precache rel="stylesheet" href="https://byteverso.com/assets/algolia/bundle.min.335d74cda2d596bc678447293a4278bf25b624f67f69755e4773434b4f0883c4.css" integrity="sha256-M110zaLVlrxnhEcpOkJ4vyW2JPZ/aXVeR3NDS08Ig8Q=" crossorigin="anonymous">
+<link data-precache rel="stylesheet" href="https://www.byteverso.com/assets/algolia/bundle.min.335d74cda2d596bc678447293a4278bf25b624f67f69755e4773434b4f0883c4.css" integrity="sha256-M110zaLVlrxnhEcpOkJ4vyW2JPZ/aXVeR3NDS08Ig8Q=" crossorigin="anonymous">
 
 </head>
   <body><header>
@@ -46,8 +46,8 @@
 <nav class="top-app-bar shadow navbar navbar-expand-xxl fixed-top">
   <div class="container">
 <a class="navbar-brand d-flex align-items-center flex-grow-1 flex-xxl-grow-0 justify-content-xxl-start ms-2 ms-xxl-0 mx-auto me-xxl-2"
-    href="https://byteverso.com">
-    <picture><img class="logo " alt="Logo" src="https://byteverso.com/images/logo.png" loading="lazy" width="500" height="500" />
+    href="https://www.byteverso.com">
+    <picture><img class="logo " alt="Logo" src="https://www.byteverso.com/images/logo.png" loading="lazy" width="500" height="500" />
 </picture>BYTEVERSO
 </a>
 
@@ -58,7 +58,57 @@
       </div>
       <div class="offcanvas-body p-4 pt-0 p-xxl-0">
         <hr class="d-xxl-none">
-        <ul class="navbar-nav flex-row flex-wrap align-items-center me-auto">
+        <ul class="navbar-nav flex-row flex-wrap align-items-center me-auto"><li class="nav-item col-6 col-xxl-auto">
+            <a class="nav-link py-2 px-0 px-xxl-2" href="https://www.byteverso.com">
+<span class="menu-icon me-1"><i class="fab fa-fw fa-github text-primary"></i></span>Content
+            </a>
+          </li><li class="nav-item col-6 col-xxl-auto">
+            <a class="nav-link py-2 px-0 px-xxl-2" href="https://byteverso.com" target="_blank" rel="noopener noreferrer">
+<span class="menu-icon me-1"><i class="fas fa-home"></i></span>Home
+            </a>
+          </li>
+          <li class="nav-item col-12 col-xxl-auto dropdown px-0">
+            <a href="#"
+              class="nav-link dropdown-toggle"
+              id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">support
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown" data-bs-popper="none">
+              <li>
+                <a class="dropdown-item d-flex align-items-center text-wrap text-xxl-nowrap"
+                  href="https://github.com/razonyang/hugo-theme-bootstrap/discussions/new" target="_blank" rel="noopener noreferrer">
+                    <span class="dropdown-item-icon me-2 p-2 rounded">
+                      <i class="fas fa-fw fa-comments text-success"></i>
+                    </span>
+                  <div class="dropdown-item-content">
+                    <p class="dropdown-item-title mb-1">Programming</p>
+                      <p class="dropdown-item-description mb-0 text-secondary">Ask and discuss questions with others.</p>
+                  </div></a>
+              </li>
+              <li>
+                <a class="dropdown-item d-flex align-items-center text-wrap text-xxl-nowrap"
+                  href="https://github.com/razonyang/hugo-theme-bootstrap/issues/new?template=bug_report.yml" target="_blank" rel="noopener noreferrer">
+                    <span class="dropdown-item-icon me-2 p-2 rounded">
+                      <i class="fas fa-fw fa-bug text-danger"></i>
+                    </span>
+                  <div class="dropdown-item-content">
+                    <p class="dropdown-item-title mb-1">Bug Report</p>
+                      <p class="dropdown-item-description mb-0 text-secondary">Tell us about a bug or issue.</p>
+                  </div></a>
+              </li>
+              <li>
+                <a class="dropdown-item d-flex align-items-center text-wrap text-xxl-nowrap"
+                  href="https://github.com/razonyang/hugo-theme-bootstrap/issues/new?template=feature_request.yml" target="_blank" rel="noopener noreferrer">
+                    <span class="dropdown-item-icon me-2 p-2 rounded">
+                      <i class="fas fa-fw fa-lightbulb text-warning"></i>
+                    </span>
+                  <div class="dropdown-item-content">
+                    <p class="dropdown-item-title mb-1">Features Request</p>
+                      <p class="dropdown-item-description mb-0 text-secondary">Suggest new or updated features.</p>
+                  </div></a>
+              </li>
+              <li><hr class="dropdown-divider"></li>
+            </ul>
+          </li>
         </ul>
         <hr class="d-xxl-none">
         <ul class="navbar-nav flex-row flex-wrap align-items-center ms-md-auto">
@@ -114,7 +164,7 @@
         aria-controls="navbarMenus" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fas fa-ellipsis-h"></i>
       </button><hr class="vr d-none d-xxl-block ms-xxl-1">
-  <div class="search-button d-flex align-items-center me-1 me-md-0 px-2" data-search-index="https://byteverso.com/algolia/index.json"></div>
+  <div class="search-button d-flex align-items-center me-1 me-md-0 px-2" data-search-index="https://www.byteverso.com/algolia/index.json"></div>
     </div>
   </div>
 </nav>
@@ -206,23 +256,23 @@
     </div>
     <div class="card-body collapse accordion-collapse accordion-body d-lg-block show" id="stats" aria-labelledby="stats-header">
         <div class="row row-cols-5">
-            <a class="stat col d-flex flex-column align-items-center" title="Posts" href="https://byteverso.com/">
+            <a class="stat col d-flex flex-column align-items-center" title="Posts" href="https://www.byteverso.com/">
                 <i class="stat-icon fas fa-fw fa-2x fa-file-alt mb-2"></i>
                 <span class="stat-count">1</span>
             </a>
-            <a class="stat col d-flex flex-column align-items-center" title="Authors" href="https://byteverso.com/authors">
+            <a class="stat col d-flex flex-column align-items-center" title="Authors" href="https://www.byteverso.com/authors">
                 <i class="stat-icon fas fa-fw fa-2x fa-user mb-2"></i>
                 <span class="stat-count">0</span>
             </a>
-            <a class="stat col d-flex flex-column align-items-center" title="Categories" href="https://byteverso.com/categories">
+            <a class="stat col d-flex flex-column align-items-center" title="Categories" href="https://www.byteverso.com/categories">
                 <i class="stat-icon fas fa-fw fa-2x fa-folder mb-2"></i>
                 <span class="stat-count">0</span>
             </a>
-            <a class="stat col d-flex flex-column align-items-center" title="Series" href="https://byteverso.com/series">
+            <a class="stat col d-flex flex-column align-items-center" title="Series" href="https://www.byteverso.com/series">
                 <i class="stat-icon fas fa-fw fa-2x fa-columns mb-2"></i>
                 <span class="stat-count">0</span>
             </a>
-            <a class="stat col d-flex flex-column align-items-center" title="Tags" href="https://byteverso.com/tags">
+            <a class="stat col d-flex flex-column align-items-center" title="Tags" href="https://www.byteverso.com/tags">
                 <i class="stat-icon fas fa-fw fa-2x fa-tags mb-2"></i>
                 <span class="stat-count">0</span>
             </a>
@@ -312,8 +362,8 @@
 </div>
 <div class="powered-by mb-2">
   Powered by <a class="text-primary" href="https://gohugo.io" target="_blank" rel="noopener noreferrer">Hugo</a> and the <a class="text-primary" href="https://github.com/razonyang/hugo-theme-bootstrap" target="_blank" rel="noopener noreferrer">HBS</a> theme.
-</div></footer><script data-precache src="https://byteverso.com/assets/main/bundle.min.d5f857e150e16d4e1636ca98eccb61caa5bb4add116c65237ed520bf868e50bd.js" integrity="sha256-1fhX4VDhbU4WNsqY7MthyqW7St0RbGUjftUgv4aOUL0=" crossorigin="anonymous" async></script><script data-precache src="https://byteverso.com/assets/icons/bundle.min.4f3b3207ad6712b2cc7f2d00841abb7099b24a9b5a3cb139c1a17850b60ce11c.js" integrity="sha256-TzsyB61nErLMfy0AhBq7cJmySptaPLE5waF4ULYM4Rw=" crossorigin="anonymous" defer></script>
-<script data-precache src="https://byteverso.com/assets/viewer/bundle.min.e5a7213f2100ce0c5c22bd9f113527cd503672ffe57b00e9d6bf5f2abb0d86b2.js" integrity="sha256-5achPyEAzgxcIr2fETUnzVA2cv/lewDp1r9fKrsNhrI=" crossorigin="anonymous" defer></script><script data-precache defer src="https://byteverso.com/assets/algolia/bundle.min.804de853bec4a5bb94daee197de50fac763c1ef7bd5f8268b20573bb9aa444c1.js" integrity="sha256-gE3oU77EpbuU2u4ZfeUPrHY8Hve9X4JosgVzu5qkRME=" crossorigin="anonymous"></script><script data-precache src="https://byteverso.com/assets/search/bundle.min.ac99cfdf667b8af6e3d9c104a12fbe6382ff0976e47cacbed90f752bbfba3417.js" integrity="sha256-rJnP32Z7ivbj2cEEoS&#43;&#43;Y4L/CXbkfKy&#43;2Q91K7&#43;6NBc=" crossorigin="anonymous"></script>
+</div></footer><script data-precache src="https://www.byteverso.com/assets/main/bundle.min.5f2548b6e18eb5883cdde403ad573d229e63ade8f6f5d968beaf4f8d86a3fb50.js" integrity="sha256-XyVItuGOtYg83eQDrVc9Ip5jrej29dlovq9PjYaj&#43;1A=" crossorigin="anonymous" async></script><script data-precache src="https://www.byteverso.com/assets/icons/bundle.min.4f3b3207ad6712b2cc7f2d00841abb7099b24a9b5a3cb139c1a17850b60ce11c.js" integrity="sha256-TzsyB61nErLMfy0AhBq7cJmySptaPLE5waF4ULYM4Rw=" crossorigin="anonymous" defer></script>
+<script data-precache src="https://www.byteverso.com/assets/viewer/bundle.min.e5a7213f2100ce0c5c22bd9f113527cd503672ffe57b00e9d6bf5f2abb0d86b2.js" integrity="sha256-5achPyEAzgxcIr2fETUnzVA2cv/lewDp1r9fKrsNhrI=" crossorigin="anonymous" defer></script><script data-precache defer src="https://www.byteverso.com/assets/algolia/bundle.min.804de853bec4a5bb94daee197de50fac763c1ef7bd5f8268b20573bb9aa444c1.js" integrity="sha256-gE3oU77EpbuU2u4ZfeUPrHY8Hve9X4JosgVzu5qkRME=" crossorigin="anonymous"></script><script data-precache src="https://www.byteverso.com/assets/search/bundle.min.ac99cfdf667b8af6e3d9c104a12fbe6382ff0976e47cacbed90f752bbfba3417.js" integrity="sha256-rJnP32Z7ivbj2cEEoS&#43;&#43;Y4L/CXbkfKy&#43;2Q91K7&#43;6NBc=" crossorigin="anonymous"></script>
 
   </body>
 </html>
