--- a/politica-privacidade/index.html
+++ b/politica-privacidade/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html data-bs-theme="auto">
-  <head><script src="https://www.byteverso.com/assets/init/bundle.min.bb6ecb2a02515c5f14fba57c23e1cdda2f9e741f0865dc1a95e541af33252f95.js" integrity="sha256-u27LKgJRXF8U&#43;6V8I&#43;HN2i&#43;edB8IZdwaleVBrzMlL5U=" crossorigin="anonymous"></script>
+  <head><script src="https://www.byteverso.com/assets/init/bundle.min.afadd62c9273e3d5b1989f0d3239485f5aa171dee637b8fdcf22d9343fae411f.js" integrity="sha256-r63WLJJz49WxmJ8NMjlIX1qhcd7mN7j9zyLZND&#43;uQR8=" crossorigin="anonymous"></script>
 
-<link data-precache rel="stylesheet" href="https://www.byteverso.com/assets/main/bundle.min.627315ec422509687a51b43d443bfac929b32390546bb64e9e879a2f680e1fe6.css" integrity="sha256-YnMV7EIlCWh6UbQ9RDv6ySmzI5BUa7ZOnoeaL2gOH+Y=" crossorigin="anonymous">
+<link data-precache rel="stylesheet" href="https://www.byteverso.com/assets/main/bundle.min.6a1e7b6a9fb773fee06c87f48e13c23c4442b1d6ca307d74877d9b68d9850962.css" integrity="sha256-ah57ap+3c/7gbIf0jhPCPERCsdbKMH10h32baNmFCWI=" crossorigin="anonymous">
 
     <title>https://www.byteverso.com/politica-de-privacidade/</title>
     <link rel="canonical" href="https://www.byteverso.com/politica-de-privacidade/"/>
