--- a/politica-privacidade/index.html
+++ b/politica-privacidade/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html data-bs-theme="auto">
-  <head><script src="https://www.byteverso.com/assets/init/bundle.min.afadd62c9273e3d5b1989f0d3239485f5aa171dee637b8fdcf22d9343fae411f.js" integrity="sha256-r63WLJJz49WxmJ8NMjlIX1qhcd7mN7j9zyLZND&#43;uQR8=" crossorigin="anonymous"></script>
+  <head><script src="https://www.byteverso.com/assets/init/bundle.min.e02a268a30bd13d88e7cc1414ffa650db250b18fa1902562c2ec4580a7d088b3.js" integrity="sha256-4ComijC9E9iOfMFBT/plDbJQsY&#43;hkCViwuxFgKfQiLM=" crossorigin="anonymous"></script>
 
-<link data-precache rel="stylesheet" href="https://www.byteverso.com/assets/main/bundle.min.6a1e7b6a9fb773fee06c87f48e13c23c4442b1d6ca307d74877d9b68d9850962.css" integrity="sha256-ah57ap+3c/7gbIf0jhPCPERCsdbKMH10h32baNmFCWI=" crossorigin="anonymous">
+<link data-precache rel="stylesheet" href="https://www.byteverso.com/assets/main/bundle.min.27750dfd40e87592fdcc0950cba22d2e7399f7dcfde7ed83c501977648c031da.css" integrity="sha256-J3UN/UDodZL9zAlQy6ItLnOZ99z95+2DxQGXdkjAMdo=" crossorigin="anonymous">
 
     <title>https://www.byteverso.com/politica-de-privacidade/</title>
     <link rel="canonical" href="https://www.byteverso.com/politica-de-privacidade/"/>
