--- a/search/index.html
+++ b/search/index.html
@@ -19,12 +19,13 @@
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://www.byteverso.com/search/" />
+
 <meta itemprop="name" content="Search">
 <meta itemprop="description" content="">
   <meta property="og:image" content="https://www.byteverso.com/images/logo.png"/>
   <meta name="twitter:image" content="https://www.byteverso.com/images/logo.png"/>
 <link rel="alternate" type="application/rss+xml" href="https://www.byteverso.com/search/index.xml" title="BYTEVERSO" />
-<link data-precache rel="stylesheet" href="https://www.byteverso.com/assets/main/bundle.min.27750dfd40e87592fdcc0950cba22d2e7399f7dcfde7ed83c501977648c031da.css" integrity="sha256-J3UN/UDodZL9zAlQy6ItLnOZ99z95+2DxQGXdkjAMdo=" crossorigin="anonymous">
+<link data-precache rel="stylesheet" href="https://www.byteverso.com/assets/main/bundle.min.94efd321e29f266f7fc1eaf5a9ed731b4501858be8759296a689a85366888687.css" integrity="sha256-lO/TIeKfJm9/wer1qe1zG0UBhYvodZKWpomoU2aIhoc=" crossorigin="anonymous">
 
     <link data-precache rel="stylesheet" href="https://www.byteverso.com/assets/viewer/bundle.min.eb914844636cd41f221f109e99c887bbc3b6b5ffb2af7c664b284cea2d1b54b7.css" integrity="sha256-65FIRGNs1B8iHxCemciHu8O2tf&#43;yr3xmSyhM6i0bVLc=" crossorigin="anonymous">
 
@@ -344,7 +345,7 @@
 </script>
 
       </div>
-    </main><footer class="footer mt-auto py-3 text-center container">
+    </main><footer class="footer text-center" style="position: relative; bottom:0; width: 100%">
 
 
 <nav class="social-links nav justify-content-center justify-content-between justify-content-lg-center mb-2">
@@ -354,8 +355,10 @@
 </div>
 <div class="powered-by mb-2">
   Powered by <a class="text-primary" href="https://gohugo.io" target="_blank" rel="noopener noreferrer">Hugo</a> and the <a class="text-primary" href="https://github.com/razonyang/hugo-theme-bootstrap" target="_blank" rel="noopener noreferrer">HBS</a> theme.
-</div></footer>
-<script data-precache src="https://www.byteverso.com/assets/main/bundle.min.104b9d9ba97778a1d501d5f7e4079dca1c2fcecc990981eeed8a78f07da015c7.js" integrity="sha256-EEudm6l3eKHVAdX35AedyhwvzsyZCYHu7Yp48H2gFcc=" crossorigin="anonymous" async></script><script data-precache src="https://www.byteverso.com/assets/icons/bundle.min.4f3b3207ad6712b2cc7f2d00841abb7099b24a9b5a3cb139c1a17850b60ce11c.js" integrity="sha256-TzsyB61nErLMfy0AhBq7cJmySptaPLE5waF4ULYM4Rw=" crossorigin="anonymous" defer></script>
+</div><link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@v2.8.9/dist/cookieconsent.css" media="print" onload="this.media='all'">
+  <script src="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@v2.8.9/dist/cookieconsent.js"></script>
+  <script src="https://www.byteverso.com/js/cookie.js"></script>
+</footer><script data-precache src="https://www.byteverso.com/assets/main/bundle.min.104b9d9ba97778a1d501d5f7e4079dca1c2fcecc990981eeed8a78f07da015c7.js" integrity="sha256-EEudm6l3eKHVAdX35AedyhwvzsyZCYHu7Yp48H2gFcc=" crossorigin="anonymous" async></script><script data-precache src="https://www.byteverso.com/assets/icons/bundle.min.4f3b3207ad6712b2cc7f2d00841abb7099b24a9b5a3cb139c1a17850b60ce11c.js" integrity="sha256-TzsyB61nErLMfy0AhBq7cJmySptaPLE5waF4ULYM4Rw=" crossorigin="anonymous" defer></script>
 <script data-precache src="https://www.byteverso.com/assets/viewer/bundle.min.e5a7213f2100ce0c5c22bd9f113527cd503672ffe57b00e9d6bf5f2abb0d86b2.js" integrity="sha256-5achPyEAzgxcIr2fETUnzVA2cv/lewDp1r9fKrsNhrI=" crossorigin="anonymous" defer></script><script data-precache defer src="https://www.byteverso.com/assets/algolia/bundle.min.af3a1c26233a1ccaff39be1b74211929fa364d0f29ae68fd026acbe28bc1c569.js" integrity="sha256-rzocJiM6HMr/Ob4bdCEZKfo2TQ8prmj9AmrL4ovBxWk=" crossorigin="anonymous"></script><script data-precache src="https://www.byteverso.com/assets/search/bundle.min.ac99cfdf667b8af6e3d9c104a12fbe6382ff0976e47cacbed90f752bbfba3417.js" integrity="sha256-rJnP32Z7ivbj2cEEoS&#43;&#43;Y4L/CXbkfKy&#43;2Q91K7&#43;6NBc=" crossorigin="anonymous"></script>
 
   </body>
